--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cluster-forecast",
   "version": "0.1.0",
+  "engines": {
+    "node": "8.1.x",
+    "npm" : "5.0.x"
+  },
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
