--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "engines": {
     "node": "8.1.x",
-    "npm" : "5.0.x"
+    "npm": "5.0.x"
   },
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
-  },
-  "devDependencies": {
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-scripts": "1.0.7"
   },
+  "devDependencies": {},
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
