--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "recharts": "^1.0.0-alpha.0"
   },
   "devDependencies": {},
   "scripts": {
