--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-scripts": "1.0.7",
-    "recharts": "^1.0.0-alpha.0"
+    "recharts": "0.22.3"
   },
   "devDependencies": {},
   "scripts": {
