--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cluster-forecast",
   "version": "0.1.0",
+  "license": "GPL-3.0+",
   "engines": {
     "node": "8.1.x",
     "npm": "5.0.x"
