--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ClusterForecast",
+  "name": "A simple web app that helps predict demand for ClusterTruck's... well truck's",
   "icons": [
     {
       "src": "favicon.ico",
